added prod test in jeninsfile

--- a/Jenkinsfile.save.1
+++ b/Jenkinsfile.save.1
@@ -66,15 +66,12 @@ pipeline {
         steps {
             echo "Start of Stage Test"
             echo "Project name is ${project_name}"
-
+            
             dir("code") {
-              
-                 sh "python3 ./tests.py"
-//               sh "./tests.py"          
+              sh "test.sh"
+            }  
 
-            }
-
-//            sh /var/lib/jenkins/workspace/test_telebot/code/tests.sh
+            //sh /var/lib/jenkins/workspace/test_telebot/code/tests.sh
             echo "end of Stage Test"
             sh "pwd"
             sh "ls -la"
